# HeTangAI

./: .gitignore  CLAUDE.md  IMPLEMENTATION_PLAN.md  README.md  api.py  build.sh  external_video_executor.py  gen-readme.md  grok_video_executor.py  hetangai.spec  jianying_draft_demo.py  main.py  pyproject.toml  settings.json  tts-sample.py  updater.py  version.py
.github/workflows/: build.yml
assets/audios/: audios.csv
assets/styles/: styles.json
services/: __init__.py  excel_parser.py  file_server.py  generator.py  jsonl_parser.py  mock_generator.py  project_manager.py  shots.py  stream_llm.py  utils.py  whisk.py
services/prompts/: role.txt  scene.txt  shot.txt
tasks/: __init__.py  manager.py  models.py  runner.py
tasks/executor/: __init__.py  audio.py  base.py  image.py  video.py
web/: index.html
web-src/: package-lock.json  package.json
web-src/src/: App.tsx  index.css  types.ts
web-src/src/components/character/: CharacterImportModal.tsx  CharacterPanel.tsx  ReferenceAudioModal.tsx
web-src/src/components/layout/: Sidebar.tsx
web-src/src/components/shot/: BatchGenerateModal.tsx  ColumnFilter.tsx  ExcelColumnFilter.tsx  JsonlTable.tsx  ShotFilter.tsx  ShotTable.tsx
web-src/src/hooks/: useApi.ts  useTaskPolling.ts
web-src/src/pages/: CharactersPage.tsx  DubbingPage.tsx  DubbingViewPage.tsx  HomePage.tsx  ProjectListPage.tsx  ProjectSettingsPage.tsx  ScenesPage.tsx  SettingsPage.tsx  ShotBuilderPage.tsx  ShotsPage.tsx
web/assets/: index-B1BGYzBH.js  index-BLjaR-To.css  index-C-7sYPBT.css  index-vqxkCbG8.js
(+18 files in other folders)
