[project]
name = "hetangai"
version = "0.1.0"
description = "AI Lens Creation Workshop - Desktop application for shot script management and AI image/video generation"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pywebview>=5.3",
    "loguru>=0.7",
    "openpyxl>=3.1",
    "pandas>=2.2",
    "httpx>=0.28.1",
    "pycapcut>=0.0.3",
    "pydub>=0.25.1",
]
