[project]
name = "hetangai"
version = "0.2.0"
description = "AI Lens Creation Workshop - Desktop application for shot script management and AI image/video generation"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pywebview>=5.3",
    "loguru>=0.7",
    "openpyxl>=3.1",
    "pandas>=2.2",
    "httpx>=0.28.1",
    "pycapcut>=0.0.3",
    "pydub>=0.25.1",
    "requests>=2.32.5",
    "pydantic>=2.12.5",
    "openai>=2.15.0",
    "dotenv>=0.9.9",
    "pyinstaller>=6.18.0",
    "audiotsm>=0.1.2",
    "numpy>=2.4.1",
]
